force-app/main/default/objects/RTL_Fulfillment__c/RTL_Fulfillment__c.object-meta.xml
<CustomObject>
    <description>Keep information of campaign fulfillment to customer</description>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>FF-{0000}</displayFormat>
        <label>Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>