force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Account_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>