force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Amount__c.field-meta.xml
<CustomField>
    <fullName>RTL_Amount__c</fullName>
    <description>Fulfillment Amount</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>