force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Fulfillment</relationshipLabel>
    <relationshipName>Fulfillment</relationshipName>
    <type>Lookup</type>
</CustomField>