force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Customer__c.field-meta.xml
<CustomField>
    <fullName>RTL_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fulfillment</relationshipLabel>
    <relationshipName>Fulfillment</relationshipName>
    <type>Lookup</type>
</CustomField>