force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>