force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Fulfillment_Address__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Address</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>