force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Fulfillment_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Fulfillment ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>