force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Fulfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>