force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Fulfillment_Type__c</fullName>
    <description>FF Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fulfillment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>