force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RTL_Mobile_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>