force-app/main/default/objects/RTL_Fulfillment__c/fields/RTL_PCI_Card_NO__c.field-meta.xml
<CustomField>
    <fullName>RTL_PCI_Card_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PCI Card No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>